--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <a href="https://keleruby.github.io/Layout-Project-Zuri/">Click Here to check out the flexbox project</a>
     <main class="container">
       <div class="item1"></div>
       <div class="item2"></div>
